Fix aura::WindowPortLocal assumption on embedding

When ParentWindowAllocator changed to default generate a valid
LocalSurfaceId, it broke an implicit assumption that Aura's
WindowPortLocal was relying on.

aura::WindowPortLocal used the default invalid LocalSurfaceId to know it
had not generated a valid ID as the result of embedding external
content.

This patch fixes that by keeping the LocalSurfaceId allocator in a
base::Optional and checking that to determine external content
embedding.

BUG=840246

Change-Id: Ie5475e239cc237caaf3a68b149f92812746a7129
Reviewed-on: https://chromium-review.googlesource.com/1046378
Commit-Queue: Chris Blume <cblume@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557717}