ui/aura/local/window_port_local.h
@@ -8,6 +8,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/macros.h"
 #include "base/memory/weak_ptr.h"
+#include "base/optional.h"
 #include "components/viz/common/surfaces/frame_sink_id.h"
 #include "components/viz/common/surfaces/parent_local_surface_id_allocator.h"
 #include "ui/aura/local/layer_tree_frame_sink_local.h"
@@ -61,11 +62,13 @@ class AURA_EXPORT WindowPortLocal : public WindowPort {
   void OnSurfaceChanged(const viz::SurfaceInfo& surface_info);
   void UpdateLocalSurfaceId();
   const viz::LocalSurfaceId& GetCurrentLocalSurfaceId() const;
+  bool IsEmbeddingExternalContent() const;
 
   Window* const window_;
   gfx::Size last_size_;
   float last_device_scale_factor_ = 1.0f;
-  viz::ParentLocalSurfaceIdAllocator parent_local_surface_id_allocator_;
+  base::Optional<viz::ParentLocalSurfaceIdAllocator>
+      parent_local_surface_id_allocator_;
   base::WeakPtr<cc::LayerTreeFrameSink> frame_sink_;
 
   base::WeakPtrFactory<WindowPortLocal> weak_factory_;
